syntax = "proto3";
import "google/api/annotations.proto";

message User{
    int64 id = 1;
    string userName = 2;
    string userEmail = 3;
    int32 level = 4;
    int32 parent = 5;
    int32 status = 6;
    int64 memberId = 7;
    string dbId = 8;
}

message LocationRequest{
    string api = 1;
    double lat = 2;
    double long = 3;
    string userId = 4;
    string description = 5;
    string memberName = 6;
}

message LocationResponse{
    string api = 1;
    string message = 2;
    bool error = 3;
}

service LocationService{
    rpc CreateLocation(LocationRequest) returns (LocationResponse){
        option (google.api.http) = {
            post: "/v1/location/create"
            body: "*"
        };
    }
}